# postgres-examples

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  postgrestools.jsonc  pyproject.toml
.devcontainer/: devcontainer.json  onCreateCommand.sh
aws-rds-rotation/: README.md
aws-s3-extension/: README.md  docker-compose.yaml  export-s3.sql  import-s3.sql
aws-s3-extension/initdb.d/: 200_aws-s3.sql  install-extensions.sql
